[package]
name = "sequencer"
version = "0.1.0"
edition = "2021"

[lib]
name = "sequencer"
path = "src/lib.rs"

[[bin]]
name = "sequencer"
path = "src/main.rs"

[dependencies]
alloy = { version = "0.11.0", features = ["full"] }
axum = { version = "0.8.1", features = ["http2"] }
eyre = "0.6.12"
serde_json = "1.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full", "rt-multi-thread"] }
tower = "0.5.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15.0"
